# SlicerTotalSegmentator

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  TotalSegmentator.xcf
TotalSegmentator/: CMakeLists.txt  TotalSegmentator.py
TotalSegmentator/Resources/: SegmentationCategoryTypeModifier-TotalSegmentator.term.json  totalsegmentator_snomed_mapping.csv
TotalSegmentator/Resources/UI/: TotalSegmentator.ui
TotalSegmentator/Testing/Python/: CMakeLists.txt
